# sap

./: .gitignore  Dockerfile  Dockerfile.server  MANIFEST.in  README  README.devel  README.md  TODO.txt  common.yml  create_windows_gui.bat  develop.yml  dir2dmg.sh  docker-compose.yml  environment.yml  fixBioDistr.py  ima2-4.5.10.tar  notes.muse  production.yml  setup.cfg  setup.py  testIMa.py  win_installer_script.nsi  winpostinstall.py
SAP/: Align.py  CompileDatabase.py  ConsoleScripts.py  Exceptions.py  Fasta.py  FastaIndex.py  FindPlugins.py  GUI.py  Homology.py  Initialize.py  InstallDependencies.py  MachinePool.py  MrBayesWrapper.py  NCBIWWW.py  NCBIXML.py  NeighbourJoin.py  NeighbourJoinWrapper.py  Options.py  PairWiseDiffs.py  ProgressBar.py  ResultHTML.py  SGE.py  SVG.py  SearchResult.py  Table.py  Taxonomy.py  TreeStatistics.py  UtilityFunctions.py  XML2Obj.py  __init__.py
ext/ima/ima/src/: Makefile.am  Makefile.in  Makefile.win32  autoc.c  build_gtree.c  build_poptree.c  calc_prob_data.c  freemem.c  ginfo.c  gtint.c  histograms.c  ima_main.c  imagsl.c  imagsl.h  imamp.h  initialize.c  mcmcfile.c  msdirent.c  msdirent.h  multi_t_bins.c  output.c  popmig.c  readata.c  surface_call_functions.c  surface_search_functions.c  swapchains.c  treeprint.c  update_gtree.c  update_gtree.h  update_gtree_common.c  update_gtree_common.h  update_gtree_covar.c  update_mc_params.c  update_mc_params.h  update_t_NW.c  update_t_RY.c  updateassignment.c  updateassignment.h  utilities.c  utilities.h  (+1 more)
icons/: app.icns
server/: .env  .env.example  Procfile  README.md  app.py  (+4 more)
(+426 files in other folders)
