## Process this file with automake to produce Makefile.in

bin_PROGRAMS = IMa2

IMa2_SOURCES = build_gtree.c build_poptree.c calc_prob_data.c ginfo.c ima_main.c initialize.c mcmcfile.c multi_t_bins.c output.c readata.c surface_call_functions.c surface_search_functions.c swapchains.c treeprint.c update_gtree.c update_gtree_common.c update_gtree_covar.c update_mc_params.c update_t_NW.c update_t_RY.c freemem.c autoc.c popmig.c gtint.c histograms.c utilities.c updateassignment.c imagsl.c imagsl.h imamp.h update_gtree.h update_gtree_common.h update_mc_params.h updateassignment.h utilities.h xtrapbits.h

EXTRA_DIST = msdirent.c msdirent.h Makefile.win32
